--- a/tuan1Bai13.html
+++ b/tuan1Bai13.html
@@ -19,7 +19,10 @@
             <input type="text">
             <div>Email: </div>
             <input type="text">
-
+            <div>Favorite Color: </div>
+            <input type="color">
+            <div>Date of Birth: </div>
+            <input type="date">
         </form>
 
     </div>
