Sửa bài 12, 13 và nộp bài 14

--- a/tuan1Bai13.html
+++ b/tuan1Bai13.html
@@ -12,17 +12,19 @@
 
 <body>
     <div>
-        <form>
-            <div>Name:</div>
-            <input type="text">
-            <div>Telephone Number: </div>
-            <input type="text">
+        <form action="" method="post
+        ">
+            <p>Name: <br>
+                <input type="text"></p>
+            <p>Telephone Number: <br>
+                <input type="text"></p>
             <div>Email: </div>
             <input type="text">
             <div>Favorite Color: </div>
             <input type="color">
             <div>Date of Birth: </div>
             <input type="date">
+            <p><input type="submit" value="Submit"></p>
         </form>
 
     </div>
