--- a/tuan1Bai12.html
+++ b/tuan1Bai12.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Free wed tutorials">
     <meta name="keywords" content="HTML, CSS, XML, JAVASCRIPT">
     <meta name="author" , content="Hege Refsnes">
-    <title>Bài 11</title>
+    <title>Bài 12</title>
 
 </head>
 
@@ -15,7 +15,8 @@
     <div>
         <form>
             <div>name</div>
-            <input type="text" required placeholder="Thanh Vân" pattern="[a-z] {1-15}">
+            <input type="text" required placeholder="Thanh Vân" pattern="[a-z] {1-15}" autocomplete="on
+            ">
             <div>
                 <input type="submit" value="Submit">
             </div>
