--- a/tuan1Bai14.html
+++ b/tuan1Bai14.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Free wed tutorials">
     <meta name="keywords" content="HTML, CSS, XML, JAVASCRIPT">
     <meta name="author" , content="Hege Refsnes">
-    <title>Bài 12</title>
+    <title>Bài 14</title>
 
 </head>
 
@@ -30,7 +30,8 @@
             </p>
             <p>
                 NewSletter
-                <input type="checkbox" style="margin-left: 100px;" value="Ensure this box is checked if you would like to receive email updates">
+                <input type="checkbox" style="margin-left: 100px;">
+                <caption>Ensure this box is checked if you would like to receive email updates</caption>
             </p>
             <input type="button" value="Send Message">
         </form>
