nộp bài 16 và hình ảnh từ bài 1-16

--- a/tuan1Bai15.html
+++ b/tuan1Bai15.html
@@ -84,6 +84,16 @@
     </fieldset>
     <fieldset>
         <legend>TieBreaker</legend>
+        <table>
+            <thead>IN 25 words or less, say why you would like to win $10,000:</thead>
+            <tr>
+                <td><textarea name="txtBody" id="txt" cols="40" rows="10"></textarea></td>
+            </tr>
+        </table>
+    </fieldset>
+    <fieldset>
+        <legend>Enter Competition</legend>
+        <input type="button" value="Enter Competition">
     </fieldset>
 </body>
 
