--- a/tuan1Bai6.html
+++ b/tuan1Bai6.html
@@ -6,10 +6,199 @@
     <meta name="description" content="Free wed tutorials">
     <meta name="keywords" content="HTML, CSS, XML, JAVASCRIPT">
     <meta name="author" , content="Hege Refsnes">
-    <title>Bài 5</title>
+    <title>Bài 6</title>
     
 </head>
 <body>
-    
+     <!-- bài 6 -->
+     <div>
+        <table border="2" cellspacing="5" cellpadding="40">
+                <tr>
+                        <td>1</td>
+                        <td style="text-align :center;" colspan="3">2</td>
+                </tr>
+                <tr>
+                        <td rowspan="3">3</td>
+                        <td style="background-color:rgb(196, 82, 7) ;">4</td>
+                        <td style="background-color:rgb(196, 82, 7) ;">5</td>
+                        <td rowspan="2" style="background-color: yellow;">6</td>
+                </tr>
+                <tr>
+                        <td style="background-color: rgb(196, 82, 7);">7</td>
+                        <td style="background-color: rgb(196, 82, 7);">8</td>
+                </tr>
+                <tr>
+                    <td style="text-align :center;" colspan="2" style="background-color: yellow;">9</td>
+                                        <td style="background-color: yellow;">10</td>
+                                </tr>
+                        </table>
+     </div>
+     <hr>      
+     <!-- bài 6b -->     
+      <div>          
+        <table border="2" style="background-color: rgb(255, 178, 62);">
+                <tr>
+                        <th>(1)</th>
+                        <th>(2)</th>
+                        <th>(3)</th>
+                        <th>(4)</th>
+                        <th>(5)</th>
+                </tr>
+                <tr>
+                        <th></th>
+                        <th colspan="3" style="color: rgb(138, 13, 13); text-align: left;" ><u>Part I</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="2"></th>
+                        <th colspan="2" style="color: rgb(138, 13, 13); text-align: left;"><u>Chapter 1</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section A</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section B</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="2"></th>
+                        <th colspan="2" style="color: rgb(138, 13, 13); text-align: left;"><u>Chapter 2</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section A</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section B</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th></th>
+                        <th colspan="3" style="color: rgb(138, 13, 13); text-align: left;" ><u>Part II</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="2"></th>
+                        <th colspan="2" style="color: rgb(138, 13, 13); text-align: left;"><u>Chapter 3</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section A</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section B</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="2"></th>
+                        <th colspan="2" style="color: rgb(138, 13, 13); text-align: left;"><u>Chapter 4</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section A</u></th>
+                        <th></th>
+                </tr>
+                <tr>
+                        <th colspan="3"></th>
+                        <th style="color: rgb(138, 13, 13); text-align: left;"><u>Section B</u></th>
+                        <th></th>
+                </tr>
+                </table>
+                <div class="Cellpadding">
+                        <h4>With cellpadding</h4>
+                        <table border="1" cellspacing = "1" cellpading ="20">
+                                <tr>
+                                        <th>6.470</th>
+                                        <th>6.470</th>
+                                </tr>
+                                <tr>
+                                        <th>6.470</th>
+                                        <th>6.470</th>
+                                </tr>
+                        </table>
+                </div> 
+                <div class="Spainning">
+                        <h4>Table with spainning row:</h4>
+                        <table border="1" cellspacing="1" cellpadding="20">
+                                <tr>
+                                        <th>6.470</th>
+                                        <th>6.470</th>
+                                </tr>
+                                <tr>
+                                        <th rowspan="2">6.470</th>
+                                        <th>6.470</th>
+                                </tr>
+                                <tr>
+                                        <th>6.470</th>
+                                </tr>
+                        </table>
+                </div> 
+       </div> 
+       <hr>
+       <!-- bài 6c -->  
+       <div>
+        <table border="1" cellpadding="15" style="border-color:  rgb(233, 32, 199);">
+                <caption style="color: rgb(233, 32, 199);"><b>NUMBER 1-5 in VARIOUS LANGUAGES</b></caption>
+                <tr style="background-color: rgb(221, 103, 231);">
+                        <th></th>
+                        <th><u>English</u></th>
+                        <th><u>Espanol</u></th>
+                        <th><u>Francais</u></th>
+                        <th><u>Italiano</u></th>
+                        <th><u>Deutsch</u></th>
+                </tr>
+                <tr>
+                        <th style="background-color: aqua;">1</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">one</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">uno</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">un</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">uno</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">eins</th>
+                </tr>
+                <tr>
+                        <th style="background-color: aqua;">2</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">tow</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">dos</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">deux</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">due</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">zwei</th>
+                </tr>
+                <tr>
+                        <th style="background-color: aqua;">3</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">three</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">tres</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">trois</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">tre</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">drei</th>
+                </tr>
+                <tr>
+                        <th style="background-color: aqua;">4</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">four</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">cuatro</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">quatre</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">quattro</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">vier</th>
+                </tr>
+                <tr>
+                        <th style="background-color: aqua;">5</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">five</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">cinco</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">cinq</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">cinque</th>
+                        <th style="background-color: rgb(255, 192, 255); color: rgb(50, 50, 230);">funf</th>
+                </tr>
+        </table>
+       </div> 
 </body>
 </html>
